# MP4TransferToGif

./: FFMPEG.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hd/transfersample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hd/transfersample/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
app/src/test/java/com/hd/transfersample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
transfer/: build.gradle
transfer/src/androidTest/java/com/hd/transfer/: ExampleInstrumentedTest.java
transfer/src/main/: AndroidManifest.xml
transfer/src/main/cpp/: native-lib.cpp
transfer/src/main/java/com/hd/transfer/: TransferGif.java
transfer/src/main/res/values/: strings.xml
transfer/src/main/transferJni/: CMakeLists.txt  transfer.c
transfer/src/test/java/com/hd/transfer/: ExampleUnitTest.java
